[package]
name = "uptime_lib"
version = "0.2.1"
authors = ["itchyny <itchyny@hatena.ne.jp>"]
description = "Multi-platform uptime library"
repository = "https://github.com/itchyny/uptime-rs"
readme = "README.md"
license = "MIT"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.126"

[target.'cfg(windows)'.dependencies.windows]
version = "0.39.0"
features = ["Win32_System_SystemInformation"]

[[bin]]
name = "uptime-rs"
path = "bin/main.rs"
