[package]
name = "uptime_lib"
version = "0.3.0"
authors = ["itchyny <itchyny@cybozu.co.jp>"]
description = "Multi-platform uptime library"
repository = "https://github.com/itchyny/uptime-rs"
readme = "README.md"
license = "MIT"
keywords = ["uptime"]
categories = ["os"]
edition = "2021"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
thiserror = "1.0.50"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.150"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57.0", features = ["Win32_System_SystemInformation"] }

[[bin]]
name = "uptime-rs"
path = "bin/main.rs"
